assets/css/main.css
/* ... */
.devicon-redhat-original-wordmark.colored,
.devicon-redhat-original.colored,
.devicon-redhat-plain-wordmark.colored,
.devicon-redhat-plain.colored {
	color: #e93442
}

.devicon-redis-plain-wordmark.colored,
.devicon-redis-plain.colored {
	color: #d82c20
}

.devicon-sass-original.colored,
.devicon-sass-plain-wordmark.colored,
.devicon-sass-plain.colored {
	color: #c69
}

.devicon-sequelize-original-wordmark.colored,
.devicon-sequelize-original.colored,
.devicon-sequelize-plain-wordmark.colored,
.devicon-sequelize-plain.colored {
	color: #3b4b72
}

.devicon-symfony-original-wordmark.colored,
.devicon-symfony-original.colored,
.devicon-symfony-plain-wordmark.colored,
.devicon-symfony-plain.colored {
	color: #1a171b
}

.devicon-travis-plain-wordmark.colored,
.devicon-travis-plain.colored {
	color: #bb2031
}

.devicon-trello-plain-wordmark.colored,
.devicon-trello-plain.colored {
	color: #23719f
}

.devicon-twitter-original.colored,
.devicon-twitter-plain.colored {
	color: #1da1f2
}

.devicon-typescript-original.colored,
.devicon-typescript-plain.colored {
	color: #007acc
}

.devicon-ubuntu-plain-wordmark.colored,
.devicon-ubuntu-plain.colored {
	color: #dd4814
}

.devicon-vim-plain.colored {
	color: #179a33
}

.devicon-windows8-original-wordmark.colored,
.devicon-windows8-original.colored,
.devicon-windows8-plain-wordmark.colored,
.devicon-windows8-plain.colored {
	color: #00adef
}

.devicon-wordpress-plain-wordmark.colored,
.devicon-wordpress-plain.colored {
	color: #494949
}

.devicon-yii-plain-wordmark.colored,
.devicon-yii-plain.colored {
	color: #0073bb
}

.devicon-zend-plain-wordmark.colored,
.devicon-zend-plain.colored {
	color: #68b604
}

*,
[class*=" devicon-"],
[class^=devicon-] {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale
}

body {
	margin: 0;
	padding: 0;
	font-size: 100%;
	line-height: 1.5;
	color: #555;
	font-family: 'Antic Slab', serif
}

article,
aside,
figcaption,
figure,
footer,
header,
nav,
section {
	display: block
}

h1,
h2,
h3,
h4,
stong {
	margin-top: 1em;
	padding-top: 1em;
	line-height: 1.25;
	color: #333
}

h1 {
	font-size: 2.5rem
}

h2 {
	font-size: 2rem
}

h3 {
	font-size: 1.5rem
}

h4 {
	font-size: 1rem
}

ol,
ul {
	padding-left: 40px
}

figure,
ol,
p,
ul {
	margin: 1em 0
}

a img {
	border: none
}

sub,
sup {
	line-height: 0
}

@-webkit-keyframes pulse {
	0%,
	to {
		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
		filter: alpha(opacity=40);
		opacity: .4;
		top: 0
	}
	50% {
		-ms-filter: none;
		-webkit-filter: none;
		filter: none;
		opacity: 1;
		top: -10px
	}
}

@keyframes pulse {
	0%,
	to {
		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
		filter: alpha(opacity=40);
		opacity: .4;
		top: 0
	}
	50% {
		-ms-filter: none;
		-webkit-filter: none;
		filter: none;
		opacity: 1;
		top: -10px
	}
}








/* Start of relevant site CSS*/






#particles-js {
	background: #1a222c;
	display: flex;
	vertical-align: bottom;
	min-height: 100vh;
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed
}

#particles-js .particles-js-canvas-el {
	height: 100vh!important
}

.header {
	font-family: 'Montserrat', sans-serif;
	z-index: 1;
	text-align: center;
	color: #fff;
	position: absolute;
	top: 50%;
	left: 50%;
	margin: 0 auto;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%)
}

.header .site-title {
	font-size: 50px;
	display: block;
	line-height: 1;
	color: #fff
}

@media only screen and (min-width:768px) {
	.header .site-title {
		margin: 0;
		font-size: 76px
	}
}

.header #site-description {
	font-size: 20px;
	display: block;
	line-height: 1;
	color: #fff;
	margin-top: 10px
}

@media only screen and (min-width:768px) {
	.header #site-description {
		font-size: 26px
	}
}

.header-links {
	margin: 10px
}

.header-links .link {
	color: #fff;
	text-decoration: none;
	font-size: 15px;
	margin: 10px
}

@media only screen and (min-width:768px) {
	.header-links .link {
		font-size: 20px
	}
}

.header-icons {
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center
}

.header-icons a {
	border: none!important;
	padding: none;
	margin: none
}

.down,
.header-icons .icon {
	color: #fff;
	text-align: center
}

.header-icons .icon {
	height: 20px;
	padding: 10px;
	border-radius: 50%;
	transition: all .5s;
	width: 20px;
	font-size: 20px;
	margin: 5px;
	border: 2px solid #fff
}

.header-icons .icon:active,
.header-icons .icon:hover {
	color: #1a222c;
	background: #fff
}

@media only screen and (min-width:768px) {
	.header-icons .icon {
		width: 30px;
		height: 30px;
		font-size: 30px;
		line-height: 30px
	}
}

.down {
	position: absolute;
	bottom: 25px;
	width: 100%;
	margin: 0 auto;
	display: block;
	font-size: 30px;
	line-height: 30px;
	cursor: pointer;
	border: none!important;
}

.down .icon {
	position: absolute;
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	width: 100px;
	height: 100px;
	fill: #fff;
	-webkit-animation: pulse 1.3s infinite;
	animation: pulse 1.3s infinite
}

.down .icon:active,
.down .icon:hover,
.footer a:active,
.footer a:hover {
	color: #4b5664
}

#about {
	font-size: 120%;
	width: 90%;
	margin: 0 auto;
	max-width: 960px;
	height:100vh;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
}

@media only screen and (min-width:768px) {
	#about {
		width: 80%
	}
}

#about svg {
	width: 60px!important;
	height: auto
}

.tech {
	margin: 10px;
	flex: 1 1 0
}

.tech h2,
.tech h3,
.user-details h1,
body {
	font-weight: 400
}

.user {
	text-align: center;
	font-size: 60px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between
}

.user p {
	font-size: 16px
}

@media only screen and (min-width:768px) {
	.user {
		flex-wrap: nowrap;
		font-size: 75px
	}
}

.user-details {
	text-align: center;
	margin: 5px auto
}
/* ... */

